refactor: make the query component size a bit less bloated